[gd_scene load_steps=3 format=3 uid="uid://clvxw8ck6npg2"]

[ext_resource type="PackedScene" uid="uid://duv4js5irfkxx" path="res://Scenes/Player/maira.tscn" id="1_0f48a"]
[ext_resource type="Script" path="res://Scenes/Scenes/Code/Points.gd" id="2_gwrrw"]

[node name="Test" type="Node2D"]

[node name="ColorRect" type="ColorRect" parent="."]
custom_minimum_size = Vector2(640, 480)
offset_right = 40.0
offset_bottom = 40.0
color = Color(0.0588235, 0.0588235, 0.0588235, 1)
metadata/_edit_lock_ = true

[node name="Maira" parent="." node_paths=PackedStringArray("PointsManager") instance=ExtResource("1_0f48a")]
position = Vector2(306, 272)
PointsManager = NodePath("../Points")

[node name="Points" type="Node" parent="."]
script = ExtResource("2_gwrrw")
size = Vector2(4, 0)

[node name="Marker2D" type="Marker2D" parent="Points"]
position = Vector2(117, 333)

[node name="Marker2D2" type="Marker2D" parent="Points"]
position = Vector2(250, 332)

[node name="Marker2D3" type="Marker2D" parent="Points"]
position = Vector2(410, 334)

[node name="Marker2D4" type="Marker2D" parent="Points"]
position = Vector2(521, 334)
